cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_157.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/aes/aes_ige.c:47: error: DEAD_STORE
  The value written to &len (type unsigned long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/aes/aes_ige.c:47:5: Write of unused value
45.   {
46.       size_t n;
47.       size_t len = length;
          ^
48.   
49.       if (length == 0)
